[feat:组件] 修改名称 react-native-bimui

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "bimui",
-    "version": "0.0.1",
+    "name": "react-native-bimui",
+    "version": "0.0.2",
     "description": "A UI library for react native.",
     "main": "index.js",
     "scripts": {
