[feat:组件] ART 封装，解决rn-web移除art问题

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     },
     "homepage": "https://github.com/heartsoul/bimui#readme",
     "dependencies": {
-      "prop-types": "^15.5.10"
+      "prop-types": "^15.5.10",
+      "teaset": ""
     },
     "devDependencies": {
       "babel-preset-react":""
@@ -33,7 +34,8 @@
     "peerDependencies": {
       "react-native": "",
       "react":"",
-      "prop-types": ""
+      "prop-types": "",
+      "react-art":""
       
     }
   }
