--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "react-native-bimui",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "A UI library for react native.",
     "main": "index.js",
     "scripts": {
@@ -26,6 +26,8 @@
     "homepage": "https://github.com/heartsoul/bimui#readme",
     "dependencies": {
       "prop-types": "^15.5.10",
+      "react-native-fetch-blob": "^0.10.8",
+      "react-native"
       "teaset": ""
     },
     "devDependencies": {
