--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "homepage": "https://github.com/heartsoul/bimui#readme",
     "dependencies": {
       "prop-types": "^15.5.10",
-      "react-native-fetch-blob": "^0.10.8",
+      "react-native-fetch-blob": "^0.10.8"
     },
     "devDependencies": {
       "babel-preset-react":""
